--- a/Cz4015_12/pom.xml
+++ b/Cz4015_12/pom.xml
@@ -7,6 +7,13 @@
     <groupId>Cz4015_1.2</groupId>
     <artifactId>Cz4015_1.2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.1</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
